src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANYCHAR
    SEMICOLON

Grammar

Rule 0     S' -> axioma
Rule 1     axioma -> axioma line
Rule 2     axioma -> empty
Rule 3     line -> COMMENT
Rule 4     line -> conditional
Rule 5     conditional -> IF axioma ELSE axioma THEN axioma
Rule 6     conditional -> IF axioma THEN axioma
Rule 7     line -> DO axioma LOOP
Rule 8     line -> PONTO
Rule 9     line -> CR
Rule 10    line -> PONTOSTRING
Rule 11    line -> EMIT
Rule 12    line -> CHAR
Rule 13    line -> operation
Rule 14    operation -> 1PLUS
Rule 15    operation -> 1MINUS
Rule 16    operation -> 2PLUS
Rule 17    operation -> 2MINUS
Rule 18    operation -> 2TIMES
Rule 19    operation -> 2DIVIDE
Rule 20    operation -> DUP
Rule 21    operation -> 2DUP
Rule 22    operation -> DROP
Rule 23    operation -> SWAP
Rule 24    operation -> DEPTH
Rule 25    line -> int line
Rule 26    line -> float line
Rule 27    line -> int
Rule 28    line -> float
Rule 29    int -> INT
Rule 30    float -> FLOAT
Rule 31    line -> COLON WORD CODE
Rule 32    line -> COLON WORD
Rule 33    line -> WORD
Rule 34    operation -> PLUS
Rule 35    operation -> MINUS
Rule 36    operation -> TIMES
Rule 37    operation -> DIVIDE
Rule 38    operation -> MOD
Rule 39    operation -> SUP
Rule 40    operation -> EQUAL
Rule 41    operation -> INF
Rule 42    operation -> SUPEQUAL
Rule 43    operation -> INFEQUAL
Rule 44    empty -> <empty>

Terminals, with rules where they appear

1MINUS               : 15
1PLUS                : 14
2DIVIDE              : 19
2DUP                 : 21
2MINUS               : 17
2PLUS                : 16
2TIMES               : 18
ANYCHAR              : 
CHAR                 : 12
CODE                 : 31
COLON                : 31 32
COMMENT              : 3
CR                   : 9
DEPTH                : 24
DIVIDE               : 37
DO                   : 7
DROP                 : 22
DUP                  : 20
ELSE                 : 5
EMIT                 : 11
EQUAL                : 40
FLOAT                : 30
IF                   : 5 6
INF                  : 41
INFEQUAL             : 43
INT                  : 29
LOOP                 : 7
MINUS                : 35
MOD                  : 38
PLUS                 : 34
PONTO                : 8
PONTOSTRING          : 10
SEMICOLON            : 
SUP                  : 39
SUPEQUAL             : 42
SWAP                 : 23
THEN                 : 5 6
TIMES                : 36
WORD                 : 31 32 33
error                : 

Nonterminals, with rules where they appear

axioma               : 1 5 5 5 6 6 7 0
conditional          : 4
empty                : 2
float                : 26 28
int                  : 25 27
line                 : 1 25 26
operation            : 13

Parsing method: LALR

state 0

    (0) S' -> . axioma
    (1) axioma -> . axioma line
    (2) axioma -> . empty
    (44) empty -> .

    COMMENT         reduce using rule 44 (empty -> .)
    DO              reduce using rule 44 (empty -> .)
    PONTO           reduce using rule 44 (empty -> .)
    CR              reduce using rule 44 (empty -> .)
    PONTOSTRING     reduce using rule 44 (empty -> .)
    EMIT            reduce using rule 44 (empty -> .)
    CHAR            reduce using rule 44 (empty -> .)
    COLON           reduce using rule 44 (empty -> .)
    WORD            reduce using rule 44 (empty -> .)
    IF              reduce using rule 44 (empty -> .)
    1PLUS           reduce using rule 44 (empty -> .)
    1MINUS          reduce using rule 44 (empty -> .)
    2PLUS           reduce using rule 44 (empty -> .)
    2MINUS          reduce using rule 44 (empty -> .)
    2TIMES          reduce using rule 44 (empty -> .)
    2DIVIDE         reduce using rule 44 (empty -> .)
    DUP             reduce using rule 44 (empty -> .)
    2DUP            reduce using rule 44 (empty -> .)
    DROP            reduce using rule 44 (empty -> .)
    SWAP            reduce using rule 44 (empty -> .)
    DEPTH           reduce using rule 44 (empty -> .)
    PLUS            reduce using rule 44 (empty -> .)
    MINUS           reduce using rule 44 (empty -> .)
    TIMES           reduce using rule 44 (empty -> .)
    DIVIDE          reduce using rule 44 (empty -> .)
    MOD             reduce using rule 44 (empty -> .)
    SUP             reduce using rule 44 (empty -> .)
    EQUAL           reduce using rule 44 (empty -> .)
    INF             reduce using rule 44 (empty -> .)
    SUPEQUAL        reduce using rule 44 (empty -> .)
    INFEQUAL        reduce using rule 44 (empty -> .)
    INT             reduce using rule 44 (empty -> .)
    FLOAT           reduce using rule 44 (empty -> .)
    $end            reduce using rule 44 (empty -> .)

    axioma                         shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> axioma .
    (1) axioma -> axioma . line
    (3) line -> . COMMENT
    (4) line -> . conditional
    (7) line -> . DO axioma LOOP
    (8) line -> . PONTO
    (9) line -> . CR
    (10) line -> . PONTOSTRING
    (11) line -> . EMIT
    (12) line -> . CHAR
    (13) line -> . operation
    (25) line -> . int line
    (26) line -> . float line
    (27) line -> . int
    (28) line -> . float
    (31) line -> . COLON WORD CODE
    (32) line -> . COLON WORD
    (33) line -> . WORD
    (5) conditional -> . IF axioma ELSE axioma THEN axioma
    (6) conditional -> . IF axioma THEN axioma
    (14) operation -> . 1PLUS
    (15) operation -> . 1MINUS
    (16) operation -> . 2PLUS
    (17) operation -> . 2MINUS
    (18) operation -> . 2TIMES
    (19) operation -> . 2DIVIDE
    (20) operation -> . DUP
    (21) operation -> . 2DUP
    (22) operation -> . DROP
    (23) operation -> . SWAP
    (24) operation -> . DEPTH
    (34) operation -> . PLUS
    (35) operation -> . MINUS
    (36) operation -> . TIMES
    (37) operation -> . DIVIDE
    (38) operation -> . MOD
    (39) operation -> . SUP
    (40) operation -> . EQUAL
    (41) operation -> . INF
    (42) operation -> . SUPEQUAL
    (43) operation -> . INFEQUAL
    (29) int -> . INT
    (30) float -> . FLOAT

    COMMENT         shift and go to state 4
    DO              shift and go to state 6
    PONTO           shift and go to state 7
    CR              shift and go to state 8
    PONTOSTRING     shift and go to state 9
    EMIT            shift and go to state 10
    CHAR            shift and go to state 11
    COLON           shift and go to state 15
    WORD            shift and go to state 16
    IF              shift and go to state 17
    1PLUS           shift and go to state 18
    1MINUS          shift and go to state 19
    2PLUS           shift and go to state 20
    2MINUS          shift and go to state 21
    2TIMES          shift and go to state 22
    2DIVIDE         shift and go to state 23
    DUP             shift and go to state 24
    2DUP            shift and go to state 25
    DROP            shift and go to state 26
    SWAP            shift and go to state 27
    DEPTH           shift and go to state 28
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32
    MOD             shift and go to state 33
    SUP             shift and go to state 34
    EQUAL           shift and go to state 35
    INF             shift and go to state 36
    SUPEQUAL        shift and go to state 37
    INFEQUAL        shift and go to state 38
    INT             shift and go to state 39
    FLOAT           shift and go to state 40

    line                           shift and go to state 3
    conditional                    shift and go to state 5
    operation                      shift and go to state 12
    int                            shift and go to state 13
    float                          shift and go to state 14

state 2

    (2) axioma -> empty .

    COMMENT         reduce using rule 2 (axioma -> empty .)
    DO              reduce using rule 2 (axioma -> empty .)
    PONTO           reduce using rule 2 (axioma -> empty .)
    CR              reduce using rule 2 (axioma -> empty .)
    PONTOSTRING     reduce using rule 2 (axioma -> empty .)
    EMIT            reduce using rule 2 (axioma -> empty .)
    CHAR            reduce using rule 2 (axioma -> empty .)
    COLON           reduce using rule 2 (axioma -> empty .)
    WORD            reduce using rule 2 (axioma -> empty .)
    IF              reduce using rule 2 (axioma -> empty .)
    1PLUS           reduce using rule 2 (axioma -> empty .)
    1MINUS          reduce using rule 2 (axioma -> empty .)
    2PLUS           reduce using rule 2 (axioma -> empty .)
    2MINUS          reduce using rule 2 (axioma -> empty .)
    2TIMES          reduce using rule 2 (axioma -> empty .)
    2DIVIDE         reduce using rule 2 (axioma -> empty .)
    DUP             reduce using rule 2 (axioma -> empty .)
    2DUP            reduce using rule 2 (axioma -> empty .)
    DROP            reduce using rule 2 (axioma -> empty .)
    SWAP            reduce using rule 2 (axioma -> empty .)
    DEPTH           reduce using rule 2 (axioma -> empty .)
    PLUS            reduce using rule 2 (axioma -> empty .)
    MINUS           reduce using rule 2 (axioma -> empty .)
    TIMES           reduce using rule 2 (axioma -> empty .)
    DIVIDE          reduce using rule 2 (axioma -> empty .)
    MOD             reduce using rule 2 (axioma -> empty .)
    SUP             reduce using rule 2 (axioma -> empty .)
    EQUAL           reduce using rule 2 (axioma -> empty .)
    INF             reduce using rule 2 (axioma -> empty .)
    SUPEQUAL        reduce using rule 2 (axioma -> empty .)
    INFEQUAL        reduce using rule 2 (axioma -> empty .)
    INT             reduce using rule 2 (axioma -> empty .)
    FLOAT           reduce using rule 2 (axioma -> empty .)
    $end            reduce using rule 2 (axioma -> empty .)
    LOOP            reduce using rule 2 (axioma -> empty .)
    ELSE            reduce using rule 2 (axioma -> empty .)
    THEN            reduce using rule 2 (axioma -> empty .)


state 3

    (1) axioma -> axioma line .

    COMMENT         reduce using rule 1 (axioma -> axioma line .)
    DO              reduce using rule 1 (axioma -> axioma line .)
    PONTO           reduce using rule 1 (axioma -> axioma line .)
    CR              reduce using rule 1 (axioma -> axioma line .)
    PONTOSTRING     reduce using rule 1 (axioma -> axioma line .)
    EMIT            reduce using rule 1 (axioma -> axioma line .)
    CHAR            reduce using rule 1 (axioma -> axioma line .)
    COLON           reduce using rule 1 (axioma -> axioma line .)
    WORD            reduce using rule 1 (axioma -> axioma line .)
    IF              reduce using rule 1 (axioma -> axioma line .)
    1PLUS           reduce using rule 1 (axioma -> axioma line .)
    1MINUS          reduce using rule 1 (axioma -> axioma line .)
    2PLUS           reduce using rule 1 (axioma -> axioma line .)
    2MINUS          reduce using rule 1 (axioma -> axioma line .)
    2TIMES          reduce using rule 1 (axioma -> axioma line .)
    2DIVIDE         reduce using rule 1 (axioma -> axioma line .)
    DUP             reduce using rule 1 (axioma -> axioma line .)
    2DUP            reduce using rule 1 (axioma -> axioma line .)
    DROP            reduce using rule 1 (axioma -> axioma line .)
    SWAP            reduce using rule 1 (axioma -> axioma line .)
    DEPTH           reduce using rule 1 (axioma -> axioma line .)
    PLUS            reduce using rule 1 (axioma -> axioma line .)
    MINUS           reduce using rule 1 (axioma -> axioma line .)
    TIMES           reduce using rule 1 (axioma -> axioma line .)
    DIVIDE          reduce using rule 1 (axioma -> axioma line .)
    MOD             reduce using rule 1 (axioma -> axioma line .)
    SUP             reduce using rule 1 (axioma -> axioma line .)
    EQUAL           reduce using rule 1 (axioma -> axioma line .)
    INF             reduce using rule 1 (axioma -> axioma line .)
    SUPEQUAL        reduce using rule 1 (axioma -> axioma line .)
    INFEQUAL        reduce using rule 1 (axioma -> axioma line .)
    INT             reduce using rule 1 (axioma -> axioma line .)
    FLOAT           reduce using rule 1 (axioma -> axioma line .)
    $end            reduce using rule 1 (axioma -> axioma line .)
    LOOP            reduce using rule 1 (axioma -> axioma line .)
    ELSE            reduce using rule 1 (axioma -> axioma line .)
    THEN            reduce using rule 1 (axioma -> axioma line .)


state 4

    (3) line -> COMMENT .

    COMMENT         reduce using rule 3 (line -> COMMENT .)
    DO              reduce using rule 3 (line -> COMMENT .)
    PONTO           reduce using rule 3 (line -> COMMENT .)
    CR              reduce using rule 3 (line -> COMMENT .)
    PONTOSTRING     reduce using rule 3 (line -> COMMENT .)
    EMIT            reduce using rule 3 (line -> COMMENT .)
    CHAR            reduce using rule 3 (line -> COMMENT .)
    COLON           reduce using rule 3 (line -> COMMENT .)
    WORD            reduce using rule 3 (line -> COMMENT .)
    IF              reduce using rule 3 (line -> COMMENT .)
    1PLUS           reduce using rule 3 (line -> COMMENT .)
    1MINUS          reduce using rule 3 (line -> COMMENT .)
    2PLUS           reduce using rule 3 (line -> COMMENT .)
    2MINUS          reduce using rule 3 (line -> COMMENT .)
    2TIMES          reduce using rule 3 (line -> COMMENT .)
    2DIVIDE         reduce using rule 3 (line -> COMMENT .)
    DUP             reduce using rule 3 (line -> COMMENT .)
    2DUP            reduce using rule 3 (line -> COMMENT .)
    DROP            reduce using rule 3 (line -> COMMENT .)
    SWAP            reduce using rule 3 (line -> COMMENT .)
    DEPTH           reduce using rule 3 (line -> COMMENT .)
    PLUS            reduce using rule 3 (line -> COMMENT .)
    MINUS           reduce using rule 3 (line -> COMMENT .)
    TIMES           reduce using rule 3 (line -> COMMENT .)
    DIVIDE          reduce using rule 3 (line -> COMMENT .)
    MOD             reduce using rule 3 (line -> COMMENT .)
    SUP             reduce using rule 3 (line -> COMMENT .)
    EQUAL           reduce using rule 3 (line -> COMMENT .)
    INF             reduce using rule 3 (line -> COMMENT .)
    SUPEQUAL        reduce using rule 3 (line -> COMMENT .)
    INFEQUAL        reduce using rule 3 (line -> COMMENT .)
    INT             reduce using rule 3 (line -> COMMENT .)
    FLOAT           reduce using rule 3 (line -> COMMENT .)
    $end            reduce using rule 3 (line -> COMMENT .)
    LOOP            reduce using rule 3 (line -> COMMENT .)
    ELSE            reduce using rule 3 (line -> COMMENT .)
    THEN            reduce using rule 3 (line -> COMMENT .)


state 5

    (4) line -> conditional .

    COMMENT         reduce using rule 4 (line -> conditional .)
    DO              reduce using rule 4 (line -> conditional .)
    PONTO           reduce using rule 4 (line -> conditional .)
    CR              reduce using rule 4 (line -> conditional .)
    PONTOSTRING     reduce using rule 4 (line -> conditional .)
    EMIT            reduce using rule 4 (line -> conditional .)
    CHAR            reduce using rule 4 (line -> conditional .)
    COLON           reduce using rule 4 (line -> conditional .)
    WORD            reduce using rule 4 (line -> conditional .)
    IF              reduce using rule 4 (line -> conditional .)
    1PLUS           reduce using rule 4 (line -> conditional .)
    1MINUS          reduce using rule 4 (line -> conditional .)
    2PLUS           reduce using rule 4 (line -> conditional .)
    2MINUS          reduce using rule 4 (line -> conditional .)
    2TIMES          reduce using rule 4 (line -> conditional .)
    2DIVIDE         reduce using rule 4 (line -> conditional .)
    DUP             reduce using rule 4 (line -> conditional .)
    2DUP            reduce using rule 4 (line -> conditional .)
    DROP            reduce using rule 4 (line -> conditional .)
    SWAP            reduce using rule 4 (line -> conditional .)
    DEPTH           reduce using rule 4 (line -> conditional .)
    PLUS            reduce using rule 4 (line -> conditional .)
    MINUS           reduce using rule 4 (line -> conditional .)
    TIMES           reduce using rule 4 (line -> conditional .)
    DIVIDE          reduce using rule 4 (line -> conditional .)
    MOD             reduce using rule 4 (line -> conditional .)
    SUP             reduce using rule 4 (line -> conditional .)
    EQUAL           reduce using rule 4 (line -> conditional .)
    INF             reduce using rule 4 (line -> conditional .)
    SUPEQUAL        reduce using rule 4 (line -> conditional .)
    INFEQUAL        reduce using rule 4 (line -> conditional .)
    INT             reduce using rule 4 (line -> conditional .)
    FLOAT           reduce using rule 4 (line -> conditional .)
    $end            reduce using rule 4 (line -> conditional .)
    LOOP            reduce using rule 4 (line -> conditional .)
    ELSE            reduce using rule 4 (line -> conditional .)
    THEN            reduce using rule 4 (line -> conditional .)


state 6

    (7) line -> DO . axioma LOOP
    (1) axioma -> . axioma line
    (2) axioma -> . empty
    (44) empty -> .
